// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders correctly 1`] = `
<ul class="uk-pagination uk-flex-center">
  <li><a><span uk-pagination-previous="true" class="uk-pagination-prev uk-icon"></span></a></li>
  <li class="uk-margin-auto-right">
    <a><span uk-pagination-previous="true" class="uk-pagination-prev uk-icon"></span></a>
  </li>
  <li><a>1</a></li>
  <li><span>...</span></li>
  <li><a>7</a></li>
  <li><a>8</a></li>
  <li><a>9</a></li>
  <li class="uk-active"><span>10</span></li>
  <li><a>11</a></li>
  <li><a>12</a></li>
  <li><a>13</a></li>
  <li><span>...</span></li>
  <li><a>20</a></li>
  <li class="uk-margin-auto-left">
    <a><span uk-pagination-next="true" class="uk-pagination-next uk-icon"></span></a>
  </li>
  <li><a><span uk-pagination-next="true" class="uk-pagination-next uk-icon"></span></a></li>
</ul>
`;

exports[`Pagination renders correctly 2`] = `
<ul class="uk-pagination">
  <li><a><span uk-pagination-previous="true" class="uk-pagination-prev uk-icon"></span></a></li>
  <li><a><span uk-pagination-next="true" class="uk-pagination-next uk-icon"></span></a></li>
</ul>
`;

exports[`Pagination renders correctly 3`] = `
<ul class="uk-pagination uk-flex-right">
  <li><a><span uk-pagination-previous="true" class="uk-pagination-prev uk-icon"></span></a></li>
  <li><a><span uk-pagination-next="true" class="uk-pagination-next uk-icon"></span></a></li>
</ul>
`;

exports[`Pagination renders correctly 4`] = `
<ul class="uk-pagination uk-flex-center">
  <li class="uk-active"><span>1</span></li>
</ul>
`;
